--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -45,5 +45,10 @@
             <version>1.1.0</version>
             <scope>compile</scope>
         </dependency>
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-client</artifactId>
+        <version>2.4.1</version>
+      </dependency>
     </dependencies>
 </project>
